Avoid DCHECK failure during ModelTypeWorker decryption

It's unclear why the DCHECK removed in this patch is guaranteed to hold
true, and in fact some tests run into it. Instead, let's defer
application of updates until all pending ones can be decrypted.

According to an old (previously deprecated) UMA metric,
Sync.WorkerApplyHasEncryptedUpdates, the condition doesn't meet about
once per million times. If this only affects the small subset of users
with custom passphrase enabled, which is likely, then it's non-
negligible.

This may (in rare cases) differ from the cryptographer being ready,
specially during sync cyles where NIGORI updates are not requested.

Bug: 873902
Change-Id: Ic70efdad3b72e9387bac50e782a51da09e532857
Reviewed-on: https://chromium-review.googlesource.com/c/1335933
Reviewed-by: Pavel Yatsuk <pavely@chromium.org>
Reviewed-by: Mohamed Amir Yosef <mamir@chromium.org>
Commit-Queue: Mikel Astiz <mastiz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609243}
Former-commit-id: 84b396debc80028ff30630365840caa9f901e38f